<resources>
    <string name="app_name">GumtreeTask</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_desc">Image</string>
    <string name="no_Items">No Items</string>
    <string name="call">CALL</string>
    <string name="sms">SMS</string>
    <string name="email">EMAIL</string>
	<string name="property_villa_Description1">Amazing villa in Denia (Deveses Beach), Alicante, Spain; recently built with high quality materials (in 2008) and situated in a quiet area just 150 m from the beach.
	    \n\nIts most important features are spacious sunny rooms and a 50 m2 pool in 600 m2 plot.
	    \n\nAlso, you have a parking for 2 cars, a double-height porch, a storage room and a water well.
	    \n\nAll windows and doors are protected with security bars and the plot is completely fenced in. 
\n\nInside you have a lovely living room, a spacious kitchen, a downstairs complete bathroom, three double bedrooms and an amazing upstairs suite equipped with complete bathroom and a solarium overlooking the sea. 
\n\nPlot area: 6.458,3 ft2 (600 m2) 
\n\nTotal floor area: 2.260,4 ft2 (210 m2) 
\n\nPool area: 538,2 ft2 (50 m2) 
\n\nBuilding year: 2.008 
\n\nDistance from the beach: 490 ft (150 m) 
\n\nRooms: 
\n- Spacious living-dining room 
\n- 3 double bedrooms 
\n- 1 suite bedroom with en-suite bathroom 
\n- 1 ground-floor bathroom 
\n- Kitchen with breakfast nook 
\n- Outdoors terraces, first-floor solarium and double-height porch 
\n- Outdoors joined building with barbeque, kitchen space, toilet, and storage room 
\n\nAmenities: 
\n- Parking for 2 cars 
\n- All windows and doors protected with security bars 
\n- Plot completely fenced in 
\n- Water well 
\n\nLOCATION: 
\nCamí Vell de Gandia a Denia 12-2, Denia, 03770, Alicante, Spain 
\n\nASKING PRICE: £285,200 (340,000 €) 
\n\nCONTACT: 
\n\nJose Puchol-Salort 
\n\nTlf: 07597517562</string>
<string name="property_villa_location1">Camden, London</string>
<string name="property_villa_price1">£285,200</string>
<string name="Property_villa_Date_Posted1">3/6/2014</string>
<string name="property_villa_name1">Dreamy Mediterranean Villa in Denia, Spain. Property for sale with private pool and 600 sqm plot</string>
<string name="property_villa_beds1">4</string>
<string name="property_villa_type1">House</string>
<string name="property_villa_phone1">07597517562</string>
<string name="property_villa_email1">test1@gmail.com</string>
<string name="Price">Price</string>
<string name="Location">Location</string>
<string name="DatePos">Date posted</string>
<string name="Details">Details</string>
<string name="PropertType">Property type</string>
<string name="NumberBeds">Number of beds</string>
<string name="SellerType">Seller type</string>
<string name="Description">Description</string>
<string name="House">House</string>
<string name="Private">Private</string>
<string name="property_villa_Description2">Hi Everyone, 
\n\nIf you are looking for an Absolute BARGAIN, and Unique Opportunity, please look no Further! 
\n\nI am currently helping an old friend, sell his Beach Mansion in Portugal for £650K. Where do I start! This Mansion is 12,000 SQF, 4 storeys, 9 rooms +, full of development Potential, and a few minutes from the beach - it has a professional garden and Swimming pool, Shiatsu, Spa, Sauna, and breath taking Ocean views! 
\n\nFor those who don’t know this, the Portuguese property market, dropped around 40% over the last 5 years, and this house was worth in the millions. This has just recently changed with Portugal now showing signs of a strong recovery as it left the financial bailout, and house prices are starting to go up. 
\n\nSo now is the time, and you will never find this huge space, prime location space for this price again - whether you are a private buyer or an investor, the potential is huge. This house refurbished could be worth much much more......and at the moment, it gives around EURO 20K rental income in just 3 months. 
\n\nIf you are interested, please let me know, and we can find a way to make it work for you. 
\n\nThis is a genuine sale, and we have every single bit of documentation you will need. 
The reason why the current owner wants to sell, is simply because he’s in his late 60’s with a 200k mortgage left on the house, and he believes it’s time to free himself from this responsibility and spend more time with his family – you will see that for yourself once you meet him. 
\n\nIf you have any questions please don’t hesitate to contact me, this will go fast 
\n\nGeorge 
\n\nNOTE: Please follow the link above (below title) for more details and Floorplans.
\n\nAd ref 1066004200</string>
<string name="property_villa_location2">Portugal, Wood Green</string>
<string name="property_villa_price2">£650,000</string>
<string name="Property_villa_Date_Posted2">2/6/2014</string>
<string name="property_villa_name2">PORTUGAL - BEACH MANSION HOUSE FOR SALE - BARGAIN! 12000SQF</string>
<string name="property_villa_beds2">10</string>
<string name="property_villa_type2">House</string>
<string name="property_villa_phone2">07517517562</string>
<string name="property_villa_email2">test2@gmail.com</string>
<string name="property_villa_Description3">Here we have for a sale a traditional detached French property with a large garden. 
\n\nThis is a light and airy property, which lies in the beautiful rural village of Chaunay in the Vienne region of South West France. It is close to the towns of Ruffec and Poitiers. 
\n\nThis property is in excellent decorative condition throughout it has 3 bedrooms, oil fired central heating, newly fitted double glazing with electric shutters and is connected to mains drainage. 
\n\nThe house is within easy reach of the N10 Motorway giving direct access to the airports at Limoges, Poitiers and La Rochelle. 
\n\nGrd floor: Leading from the hallway in this property you have two good sized bedrooms of 12.50m2 each; the family bathroom has a shower, hand basin, wc and bidet. 
\n\nA fitted kitchen of 7.5m2 leads into the dining/lounge area of 22m2 with french doors opening onto the front balcony/ porch. 
\n\nBasement: Self contained Bedroom of 14m2 with en-suite shower room with hand basin and wc 
\n\nGarage of 33m2 and utility room of 24m2 
\n\nOutside: large garden of 1,780m2 with vegetable garden, covered terrace and an outbuilding where we have commenced conversion to a separate dwelling/gite, that full planning permission, own electric and water. 
\n\nAmple parking to front and rear of the house, with rear entrance to the large double length garage. 
\n\nWe would consider part exchange for a property in England depending on location.
\n\nAd ref 1001716968</string>
<string name="property_villa_location3">UK, south-yorkshire</string>
<string name="property_villa_price3">£120,000</string>
<string name="Property_villa_Date_Posted3">today</string>
<string name="property_villa_name3">Detached 3 Bed Property with Large Garden in Vienne South West France / Part Ex any offers welcome </string>
<string name="property_villa_beds3">3</string>
<string name="property_villa_type3">House</string>
<string name="property_villa_phone3">07597527562</string>
<string name="property_villa_email3">test3@gmail.com</string>
<string name="property_villa_Description4">Two bedroom house with stone front, needs some restoration, garden of nearly 1000m² with olive and fruit trees. Candosa, Tábua. Price is 27,000€ 
\n\nAvailable to view, please email for more photos, information and location or if you have any more questions. 
\n\nProperties available to suit every budget all over Portugal! 
\n\nMeet your Agent - 
\n\nMy name is Lisa Beale. I am English and have been involved with property since I moved to Portugal in 2001. I work primarily in the central region of Portugal but using RE/MAX’s advanced search program and a network of over 3,000 agents, I can find you a property to buy anywhere in Portugal. To begin with just get in touch with your requirements and I will send you personalised recommendations by email. 
\n\nLike my page "Re/Max - Lisa Beale" on Facebook for daily property updates. 
\n\nWhy RE/MAX? - 
\n* A multi-national Superbrand which stands for quality and outstanding service with over 150,000 agents in 65 countries. 
\n* Worldwide and in Portugal nobody sells more properties than RE/MAX. 
\n* Thousands of properties to buy and rent in Portugal. 
\n* An exclusive, advanced search system to help match you to your perfect property. 
\n* A network of over 3,000 agents all over Portugal. 
\n* Every RE/MAX property is exclusive to us. 
\n* Friendly, personal service. 
\n* No charge to buyers for our services. 
\n\nProperty in Portugal to sell? Get in touch for a copy of our terms 
\n\nRE/MAX Montanha 
\nHappy Galaxy - Med. Imobiliária, Unipessoal, Lda. - AMI 8668 
\nAv. Dr. José Maria Cardoso L 26 
\n3200-243 - Lousã 
\nPortugal 
\n\nID - 122461050-232 </string>
<string name="property_villa_location4">Portugal, Lousa</string>
<string name="property_villa_price4">£123,000</string>
<string name="Property_villa_Date_Posted4">today</string>
<string name="property_villa_name4">Two bedroom stone house with garden, fruit and olive trees, Tabua - RE/MAX Portugal</string>
<string name="property_villa_beds4">2</string>
<string name="property_villa_type4">House</string>
<string name="property_villa_phone4">07597517562</string>
<string name="property_villa_email4">test4@gmail.com</string>
<string name="property_villa_Description5">BUY HOUSE in Bieszczady (POLAND)!! Location is sited village, 3 km from USTRZYKI DOLNE 
\nIt is situated in mountainous terrain. 
\nThe plot area of nearly 9 acres. 
\nThe house is situated in a picturesque location and the route to Ustrzyki top. 
\nHouse was built 1999 years detached house with an area of 212 m2. 
\nIt has 6 bedrooms, 3 bathrooms, kitchen, guest room, boiler rooms, basements, and garage space for two automobiles of 70 m2.Nad Graz is a flat Finishing the requirement of next owner. 
\nThe house is insulated and has wooden windows and oil companies have boiler rooms Viesmann of the tank for 2000 liters 

\n\nHouse can be put on Small hotel, guest house or agrotourism 

\n\nThe house is located in the town RÓWNIA.We village is an ancient Greek Catholic wooden church, oriented located on a hill in a bend of the creek Inclined. When the church is a cemetery a few preserved tombstones. 
\nNot far from town is located RÓWNIA USTRZYKI LOWER odalone about 3 km. 

\n\nUstrzyki Dolne pronounced is a town in south-eastern Poland, situated in the Subcarpathian Voivodeship (since 1999) close to the border with Ukraine. It is the capital of Bieszczady County, with 9,383 

\n\nIn existence since the 15th century, it received its city charter around 1727. In 1772 it became part of the Habsburg Monarchy where it remained until 1918 when it became part of independent Poland. It grew after 1872 when a railway connection to Przemyśl and Sanok was built, and the exploitation of local oil fields began. Temporarily in the USSR after 1944, it became part of Poland in 1951 following a minor border readjustment. 
\n\nAd ref 1061401628</string>
<string name="property_villa_location5">Poland, Bieszczady</string>
<string name="property_villa_price5">£130,000</string>
<string name="Property_villa_Date_Posted5">3/6/2014</string>
<string name="property_villa_name5">BUY HOUSE in POLAND (Bieszczady)</string>
<string name="property_villa_beds5">6</string>
<string name="property_villa_type5">House</string>
<string name="property_villa_phone5">07596517562</string>
<string name="property_villa_email5">test5@gmail.com</string>
</resources>